[REDO] Wrong stage gets focused after modal stage creation

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • jfx19
    • Affects Version/s: jfx17
    • Component/s: javafx
    • None

        When a MODAL stage is created as the owner of previous stage after a Dialog/Alert, the wrong stage is focused.

        Steps to reproduce:

        1) Run the sample
        2) Press the "Click Me!" button
        3) Answer YES on the Alert

        The primary stage is brought to front instead of the stage with the button (it's the owner of the last stage).

              Assignee:
              Thiago Sayao
              Reporter:
              Pankaj Bansal (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: