8271054: [REDO] Wrong stage gets focused after modal stage creation

Reviewed-by: kcr, arapte